apps/edge-services/atuin/app/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atuin-external
  namespace: edge-services
  labels:
    external-dns.edgard.org/scope: external
    hajimari.edgard.org/icon: mdi:key
    hajimari.edgard.org/enabled: "true"
spec:
  parentRefs:
    - name: external
      namespace: platform-system
      sectionName: https
  hostnames:
    - atuin.edgard.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: atuin
          port: 8888
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atuin-internal
  namespace: edge-services
  labels:
    external-dns.edgard.org/scope: internal
spec:
  parentRefs:
    - name: internal
      namespace: platform-system
      sectionName: https
  hostnames:
    - atuin.edgard.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: atuin
          port: 8888
